--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,12 @@ fabric.properties
 .idea/codestream.xml
 
 ### Java ###
+
+# Eclipse
+.settings
+.project
+.classpath
+
 # Compiled class file
 *.class
 
